--- a/distr/index.html
+++ b/distr/index.html
@@ -1,3 +1,3 @@
 <canvas id=C></canvas>
-<div id=U></div>
+<div id=U><input id="N" type="number" placeholder="seed"></div>
 <script src="./bundle.js"></script>
